    all filters. This is a shortcut for adding 1.1.1.1/0 to the nofilter
    host list.
    Specifying enablefilter=1 enables the filters back again.
    Type: feature
    Changed: wc/webgui/context/config_html.py

  * Fixed the "server_content without server" bug by reordering
    the handle_close calls
    Type: bugfix
    Changed: wc/proxy/HttpClient.py

2.19 "A Knight's Tale" (released 27.7.2004)
  * Fix _webcleaner2_config.py file writing when --root directory has a
    trailing slash, and don't write the unneeded output file list.
    This should fix custom installers (eg Gentoo scripts).
    Type: bugfix
    Changed: setup.py

  * Fixed ImageReducer initialization, and filter always if image
    size is not known
    Type: bugfix
    Changed: wc/filter/ImageReducer.py

  * Redirections to the proxy host are forbidden.
    Type: feature
    Changed: wc/proxy/HttpServer.py

  * improve parsing of Accept-Encoding values in Compress module
    Type: feature
    Changed: wc/filter/Compress.py

  * construct filter config xml before opening file for write;
    prevents null byte files
    Type: bugfix
    Changed: wc/filter/rules/FolderRule.py

  * new and improved test script from the schooltool project
    Type: feature
    Changed: a lot of files were moved/updated
    Added: test.py, testsimpletal.py

  * factorized code into new packages and modules
    Type: code cleanup
    Changed: a lot :)

  * Split filter header arguments in client, server and data headers.
    Client and server headers are read-only, data headers are mutable.
    Type: bugfix
    Changed: wc/filter/*.py, wc/proxy/Http{Server,Client}.py

  * the block message html is now more concise and informative
    Type: feature
    Changed: templates/classic/blocked.html, wc/filter/Blocker.py

  * fixed the url_norm function to not unquote the url anymore
    Type: bugfix
    Changed: bk/url.py

  * added a favicon
    Type: feature
    Changed: templates/classic/*.html