@@ -56,6 +56,11 @@
     Type: bugfix
     Changed: wc/proxy/HttpClient.py
 
+  * Add data of all filters to filter attributes since the MIME type
+    can change dynamically.
+    Type: feature
+    Changed: wc/filter/__init__.py
+
 2.19 "A Knight's Tale" (released 27.7.2004)
   * Fix _webcleaner2_config.py file writing when --root directory has a
     trailing slash, and don't write the unneeded output file list.
